--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "module-alias": "^2.2.3",
     "mysql2": "^3.9.0"
   }
 }
